# Local-LLM-Application-with-OpenLLMetry

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OBSERVABILITY.md  README.md  SECURITY.md  dashboard.json  dashboard.yaml  docker-compose.yml  local_llm_observability_dashboard.json
.github/: copilot-instructions.md
backend/: Dockerfile  main.py  otel_setup.py  requirements.txt
llm-otel-kit/: CHANGELOG.md  README.md  pyproject.toml
llm-otel-kit/src/llm_otel_kit/: __init__.py  bootstrap.py  config.py  metrics.py  spans.py
llm-otel-kit/src/llm_otel_kit/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai_compat.py
open-webui/: custom.css  entrypoint.sh
otel-collector/: config.yaml
template/: cookiecutter.json
template/{{cookiecutter.project_slug}}/: .env.example  .gitignore  README.md  docker-compose.yml
template/{{cookiecutter.project_slug}}/backend/: Dockerfile  main.py
template/{{cookiecutter.project_slug}}/otel-collector/: config.yaml
